--- a/package.json
+++ b/package.json
@@ -16,20 +16,18 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.6.0",
+    "@dnd-kit/core": "^6.1.0",
     "@prisma/client": "^5.14.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.39.0",
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
-    "canvas": "^2.11.2",
     "geist": "^1.3.0",
-    "konva": "^9.3.13",
     "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-konva": "^18.2.10",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "use-image": "^1.1.1",
